# DataScoop

./: .gitignore  .pylintrc  LICENSE  README.md  examples.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  tests.yml
datascoop/: __init__.py  __main__.py  cli.py  interactive.py
datascoop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
datascoop/downloaders/: __init__.py  abema.py  audio.py  base.py  video.py  youtube.py
datascoop/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py  test_helpers.py  test_package.py
