[project]
name = "datascoop"
version = "0.1.0"
description = "yt-dlpを使用した動画や音声データを効率的にダウンロードするためのPythonアプリケーション"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "yt-dlp>=2023.3.4",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
]

[project.urls]
Repository = "https://github.com/yourusername/datascoop"
Documentation = "https://github.com/yourusername/datascoop#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
datascoop = "datascoop.cli:main"
