[project]
name = "datascoop"
version = "0.1.0"
description = "yt-dlpを使用した動画や音声データを効率的にダウンロードするためのPythonアプリケーション"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ShiningWank0", email = "shiningwank0@example.com"}
]
dependencies = [
    "yt-dlp>=2023.3.4",
    "requests>=2.31.0",
    "tqdm>=4.66.1",
]

[project.urls]
Repository = "https://github.com/ShiningWank0/datascoop"
Documentation = "https://github.com/ShiningWank0/datascoop#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
datascoop = "datascoop.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=datascoop --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
